2010-11-09  Eli Zaretskii  <eliz@gnu.org>

	* xfns.c (x_real_positions): Fix declaration-after-statement
	problem.

2010-11-09  Chong Yidong  <cyd@stupidchicken.com>

	* image.c (free_image): Don't garbage the frame here, since this
	function can be called while redisplaying (Bug#7210).
	(uncache_image): Garbage the frame here (Bug#6426).

2010-11-09  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (x_real_positions): Only use _NET_FRAME_EXTENTS if our
	parent is the root window.  Check this after traversing window tree.

	* xterm.c (x_term_init): Initialize Xatom_net_frame_extents.

	* xterm.h (struct x_display_info): Xatom_net_frame_extents is new.

	* xfns.c (x_real_positions): Try to get _NET_FRAME_EXTENTS first
	before traversing window tree (Bug#5721).

2010-11-07  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (set_machine_and_pid_properties): Let X set WM_CLIENT_MACHINE.

	* xdisp.c (note_mode_line_or_margin_highlight): Initialize
	Cursor to No_Cursor for HAVE_WINDOW_SYSTEM also.

2010-11-06  Eli Zaretskii  <eliz@gnu.org>

	* xfns.c (Fx_show_tip): If any of the tool-tip text lines is R2L,
	adjust width of tool-tip frame to the width of text, excluding the
	stretch glyph at the beginning of R2L glyph rows.

	* w32fns.c (Fx_show_tip): Likewise.

2010-11-06  Jan Djärv  <jan.h.d@swipnet.se>

	* nsfont.m: Include termchar for new mouse-highlight.
	(nsfont_draw): Use MOUSE_HL_INFO.

2010-11-05  Eli Zaretskii  <eliz@gnu.org>

	Unify mouse-highlight code for all GUI and TTY sessions.

	* term.c: Remove static mouse_face_* variables.  All users
	changed.
	(term_show_mouse_face, term_clear_mouse_face)
	(fast_find_position, term_mouse_highlight): Functions deleted.
	(tty_draw_row_with_mouse_face): New function.
	(term_mouse_movement): Call note_mouse_highlight instead of
	term_mouse_highlight.

	* nsterm.m (ns_update_window_begin, ns_update_window_end)
	(ns_update_end, x_destroy_window, ns_frame_up_to_date)
	(ns_dumpglyphs_box_or_relief, ns_maybe_dumpglyphs_background)